<resources>
    <string name="app_name">DuplicateTelegram</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zahar_gusyatin">Zahar Gusyatin</string>
    <string name="online">В сети</string>
    <string name="account">Аккаунт</string>
    <string name="ChangeNumber">нажмите, чтобы изменить номер телефона</string>
    <string name="_380_633_779_320">+380 633 779 320</string>
    <string name="hasNotLogin">Не задано</string>
    <string name="settings_login">Имя пользователя</string>
    <string name="AboutYou">I Love God</string>
    <string name="changeAboutYou">О себе</string>
    <string name="settings_change_name">Изменить имя</string>
    <string name="ExitApp">Выйти</string>
    <string name="enterCode">Введите текст</string>
    <string name="weSendSMS">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="CODEHERE">- - - - - -</string>
    <string name="register_title_your_phone">hru</string>
    <string name="write_number">Введите номер телефона</string>
    <string name="settings_input_name">Имя</string>
    <string name="settings_input_username">Ваше имя пользователя</string>
    <string name="settings_input_surname">Фамилия</string>
    <string name="settings_toast_name_is_empty">Заполните имя</string>
    <string name="toast_data_update">Данные обновлены</string>
    <string name="change_bio">информация о вас</string>
    <string name="message">сообщение</string>
    <string name="send_message_plz">введите сообщение</string>
</resources>
