<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EnterCodeFragment">

    <EditText
        android:id="@+id/registerInputCode"
      style="@style/editText"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLength="6"
        android:hint="@string/CODEHERE"
        android:gravity="center"
        android:autofillHints="">

    </EditText>

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterCode"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="@dimen/margin_16"
        app:layout_constraintBottom_toTopOf="@+id/sendSMS"
        app:layout_constraintEnd_toEndOf="@+id/registerInputCode"
        app:layout_constraintStart_toStartOf="@+id/registerInputCode" />

    <TextView
        android:id="@+id/sendSMS"
        style="@style/smallText"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/weSendSMS"
        app:layout_constraintBottom_toTopOf="@+id/registerInputCode"
        app:layout_constraintEnd_toEndOf="@+id/registerInputCode"
        app:layout_constraintStart_toStartOf="@+id/registerInputCode" />

</androidx.constraintlayout.widget.ConstraintLayout>